Fix broken styles after merge
- Restore css/index.css from pre-merge (remove merged-in styles.css content)
- Remove dangling css/styles.css link from index.html (split into other files)
- Add missing styles from master: arrow SVG, heart-icon, --arrow-size variable
- Update header with glassy scroll effect and hide/show behavior from master
- Fix logo img sizing for horizontal logo

--- a/css/general.css
+++ b/css/general.css
@@ -18,6 +18,7 @@
 
     --container-width: 1200px;
     --section-padding: 80px 0;
+    --arrow-size: 18.67px;
 }
 
 /* ===== Reset & Base Styles ===== */
